amesto42/sample/busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-secrets-store-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-secrets-store
  template:
    metadata:
      labels:
        app: busybox-secrets-store
    spec:
      containers:
      - name: busybox
        image: registry.k8s.io/e2e-test-images/busybox:1.29-4
        command: ["sleep", "300"]
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          runAsUser: 65533
        livenessProbe:
          exec:
            command:
            - cat
            - /mnt/secrets-store/secret1
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - cat
            - /mnt/secrets-store/secret1
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: secrets-store01-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname-user-msi" # Change this to reflect your secretProviderClass name
